fix: Adjust SetupStep overflow

--- a/app/atoms/SetupStep.css
+++ b/app/atoms/SetupStep.css
@@ -1,6 +1,7 @@
 .wrapper {
   height: 100%;
   width: 100%;
+  overflow: auto;
   position: relative;
 }
 
@@ -36,6 +37,6 @@
   font-weight: 300;
   font-size: 2rem;
   text-transform: uppercase;
-  margin: 0 auto 1rem auto;
+  margin: 1rem auto;
   line-height: 1;
 }
